fix: adjust layout and spacing in various components for improved responsiveness

--- a/src/app/main-content/contact-me/contact-me.component.scss
+++ b/src/app/main-content/contact-me/contact-me.component.scss
@@ -24,31 +24,31 @@
 section {
     @include dFlex($g: 30px);
     flex-direction: column;
-    // position: relative;
-    // top: 80px;
+    padding-top: 50px;
 
     >div {
         @include dFlex($ai: flex-start);
         flex-direction: column;
+        position: relative;
+        top: 80px;
+        margin-bottom: 80px;
 
         .contact_headline {
             position: relative;
             @include dFlex($ai: flex-start);
             width: 100%;
-            height: 170px;
+            padding-bottom: 50px;
 
             h2 {
                 font-family: 'Anta';
                 font-size: 54px;
                 font-weight: 400;
                 color: $blue;
-                padding-top: 80px;
             }
 
             .arrow_up {
                 position: absolute;
                 right: 10px;
-                top: 80px;
 
                 &:hover {
                     background-image: url('./../../../assets/img/icons/arrow_up_hover_icon.svg');
@@ -61,7 +61,7 @@ section {
             @include dFlex($g: 30px);
             flex-direction: column;
             width: 1000px;
-            height: 100%;
+            // height: 100%;
             padding-bottom: 50px;
 
             .content {
@@ -487,11 +487,14 @@ textarea::placeholder {
 /* -------------------------------------------------- Mobil --------------------------------------------------*/
 @media (max-width: 1100px) {
     section {
+        padding-top: 0px;
+        padding-left: 10px;
+        padding-right: 10px;
 
         >div {
-            .contact_headline {
-                height: 170px;
+            top: 0px;
 
+            .contact_headline {
                 h2 {
                     font-size: 32px;
                 }
@@ -581,7 +584,7 @@ textarea::placeholder {
 
                     .arrow_up_icon_mobile {
                         width: 100%;
-                        height: 200px;
+                        // height: 200px;
                         @include dFlex();
 
                         >img {
