--- a/src/app/main-content/my-skills/my-skills.component.scss
+++ b/src/app/main-content/my-skills/my-skills.component.scss
@@ -24,7 +24,7 @@
             @include dFlex($jc: flex-start, $g: 40px);
             flex-wrap: wrap;
             width: 60%;
-            height: 600px;
+            // height: 600px;
 
             >figure {
                 @include dFlex($g: 10px);
@@ -129,7 +129,7 @@
 @media (max-width: 1100px) {
     .my_skills {
         @include dFlex($g: 32px);
-        margin-top: 50px;
+        top: 0px;
         padding-left: 50px;
         padding-right: 50px;
         width: 100%;
